syntax = "proto3";

option csharp_namespace = "AuthenticationService.SyncDataService.Grpc.Proto";

service GrpcAuthenticationService
{
	rpc GetJwtPublicKey(GetJwtPublicKeyRequest) returns (JwtPublicKeyResponse);
}

message GetJwtPublicKeyRequest {}

message JwtPublicKeyResponse 
{
	string publicKey = 1;
}
